# Snowstorm

./: .gitignore  .gitmodules  Build.lua  CMakeLists.txt  Dependencies.lua  README.md  Snowstorm.sln.DotSettings  conanfile.py
Snowstorm-App/: Build-App.lua  CMakeLists.txt  imgui.ini
Snowstorm-App/Assets/Shaders/: Texture.glsl  frag.spv  shader.frag  vert.spv
Snowstorm-App/Source/: App.cpp  ParticleSystem.cpp  ParticleSystem.h  Sandbox2D.cpp  Sandbox2D.h  SandboxApp.cpp
Snowstorm-Core/: Build-Core.lua  CMakeLists.txt
Snowstorm-Core/Source/: Snowstorm.h  pch.h
Snowstorm-Core/Source/Core/: Core.cpp  Core.h
Snowstorm-Core/Source/Platform/OpenGL/: OpenGLBuffer.cpp  OpenGLBuffer.h  OpenGLContext.cpp  OpenGLContext.h  OpenGLFramebuffer.cpp  OpenGLFramebuffer.h  OpenGLRendererAPI.cpp  OpenGLRendererAPI.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLTexture.cpp  OpenGLTexture.h  OpenGLUniformBuffer.cpp  OpenGLUniformBuffer.hpp  OpenGLVertexArray.cpp  OpenGLVertexArray.h
Snowstorm-Core/Source/Platform/Vulkan/: Core.cpp  VulkanBuffer.cpp  VulkanBuffer.h  VulkanCommandBuffers.cpp  VulkanCommandBuffers.h  VulkanCommandPool.cpp  VulkanCommandPool.h  VulkanContext.cpp  VulkanContext.h  VulkanDebugMessenger.cpp  VulkanDebugMessenger.h  VulkanDescriptor.cpp  VulkanDescriptor.h  VulkanDescriptorSetLayout.cpp  VulkanDescriptorSetLayout.h  VulkanDevice.cpp  VulkanDevice.h  VulkanFramebuffer.cpp  VulkanFramebuffer.h  VulkanGraphicsPipeline.cpp  VulkanGraphicsPipeline.h  VulkanInstance.cpp  VulkanInstance.h  VulkanQueueFamilyIndices.cpp  VulkanQueueFamilyIndices.h  VulkanRenderPass.cpp  VulkanRenderPass.h  VulkanRendererAPI.cpp  VulkanRendererAPI.h  VulkanShader.cpp  VulkanShader.h  VulkanSwapChain.cpp  VulkanSwapChain.h  VulkanSyncObjects.cpp  VulkanSyncObjects.h  VulkanTexture.cpp  VulkanTexture.h  VulkanVertex.h  VulkanVertexArray.cpp  VulkanVertexArray.h
Snowstorm-Core/Source/Platform/Vulkan1/: DescriptorSetManager.cpp  DescriptorSetManager.h  Vulkan.cpp  Vulkan.h  VulkanAPI.cpp  VulkanAPI.h  VulkanAllocator.cpp  VulkanAllocator.h  VulkanComputePass.cpp  VulkanComputePass.h  VulkanComputePipeline.cpp  VulkanComputePipeline.h  VulkanContext.cpp  VulkanContext.h  VulkanDevice.cpp  VulkanDevice.h  VulkanDiagnostics.cpp  VulkanDiagnostics.h  VulkanFramebuffer.cpp  VulkanFramebuffer.h  VulkanImGuiLayer.cpp  VulkanImGuiLayer.h  VulkanImage.cpp  VulkanImage.h  VulkanIndexBuffer.cpp  VulkanIndexBuffer.h  VulkanMaterial.cpp  VulkanMaterial.h  VulkanPipeline.cpp  VulkanPipeline.h  VulkanRenderCommandBuffer.cpp  VulkanRenderCommandBuffer.h  VulkanRenderPass.cpp  VulkanRenderPass.h  VulkanRenderer.cpp  VulkanRenderer.h  VulkanShader.cpp  VulkanShader.h  VulkanShaderResource.h  VulkanShaderUtils.cpp  (+13 more)
Snowstorm-Core/Source/Platform/Windows/: WindowsInput.cpp  WindowsWindow.cpp  WindowsWindow.h  WindowsWindow.hpp
Snowstorm-Core/Source/Snowstorm/Core/: Application.cpp  Application.h  Assert.h  Base.h  Core.cpp  Core.h  EntryPoint.h  Input.h  KeyCodes.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  MouseCodes.h  PlatformDetection.h  Snowstorm.h  Timestep.h  Window.cpp  Window.h  Window.hpp
Snowstorm-Core/Source/Snowstorm/Debug/: Instrumentor.h
Snowstorm-Core/Source/Snowstorm/ECS/: Singleton.hpp  SingletonManager.hpp  System.hpp  SystemManager.hpp  TrackedRegistry.hpp
Snowstorm-Core/Source/Snowstorm/Events/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h
Snowstorm-Core/Source/Snowstorm/ImGui/: ImGuiLayer.cpp  ImGuiLayer.h  ImguiBuild.cpp
Snowstorm-Core/Source/Snowstorm/Render/: Buffer.cpp  Camera.hpp  Framebuffer.cpp  Framebuffer.hpp  GraphicsContext.cpp  GraphicsContext.hpp  Material.cpp  Material.hpp  MeshLibrarySingleton.cpp  MeshLibrarySingleton.hpp  RenderCommand.hpp  Renderer2D.hpp  Renderer3DSingleton.cpp  SubTexture2D.hpp  Texture.hpp  UniformBuffer.cpp  VertexArray.hpp
Snowstorm-Core/Source/Snowstorm/Renderer/: BatchRenderer3DSingleton.cpp  BatchRenderer3DSingleton.hpp  Buffer.cpp  Buffer.h  Buffer.hpp  Framebuffer.cpp  Framebuffer.h  GraphicsContext.cpp  Material.cpp  Material.hpp  Mesh.cpp  Mesh.hpp  OrthographicCamera.cpp  OrthographicCamera.h  OrthographicCameraController.cpp  OrthographicCameraController.h  RenderCommand.cpp  RenderCommand.h  Renderer.cpp  Renderer.h  Renderer.hpp  Renderer2D.cpp  Renderer2D.h  Renderer2D.hpp  Renderer3DSingleton.cpp  Renderer3DSingleton.hpp  RendererAPI.cpp  RendererAPI.h  Shader.cpp  Shader.h  Shader.hpp  SubTexture2D.cpp  SubTexture2D.h  Texture.cpp  Texture.h  UniformBuffer.hpp  VertexArray.cpp  VertexArray.h  VertexArray.hpp
Snowstorm-Core/Source/Snowstorm/Renderer1/: Camera.cpp  Camera.h  ComputePass.cpp  ComputePass.h  DebugRenderer.cpp  DebugRenderer.h  Framebuffer.cpp  Framebuffer.h  GPUStats.h  Image.cpp  Image.h  IndexBuffer.cpp  IndexBuffer.h  Material.cpp  Material.h  MaterialAsset.cpp  MaterialAsset.h  Mesh.cpp  Mesh.h  MeshFactory.cpp  MeshFactory.h  Pipeline.cpp  Pipeline.h  PipelineCompute.cpp  PipelineCompute.h  RenderCommandBuffer.cpp  RenderCommandBuffer.h  RenderCommandQueue.cpp  RenderCommandQueue.h  RenderPass.cpp  RenderPass.h  Renderer.cpp  Renderer.h  Renderer2D.cpp  Renderer2D.h  RendererAPI.h  RendererCapabilities.h  RendererConfig.h  RendererContext.cpp  RendererContext.h  (+26 more)
Snowstorm-Core/Source/Snowstorm/Scene/: Components.h  Components.hpp  Entity.cpp  Entity.h  Scene.cpp  Scene.h  Scene.hpp  SceneCamera.cpp  SceneCamera.h  ScriptableEntity.h
Snowstorm-Core/Source/Snowstorm/Service/: ImGuiService.cpp  ImGuiService.hpp  Service.hpp  ServiceManager.hpp
Snowstorm-Core/Source/Snowstorm/System/: CameraControllerSystem.cpp  CameraControllerSystem.hpp  RenderSystem.cpp  RenderSystem.hpp  ScriptSystem.cpp  ScriptSystem.hpp  ShaderReloadSystem.cpp  (+3 more)
Snowstorm-Editor/: Build-Editor.lua  CMakeLists.txt  imgui.ini
Snowstorm-Editor/Assets/shaders/: BasicLit.glsl  FlatColor.glsl
Snowstorm-Editor/Source/: EditorLayer.cpp  EditorLayer.h  EditorLayer.hpp  SnowstormApp.cpp
Snowstorm-Editor/Source/Panels/: SceneHieararchyPanel.h  SceneHieararchyPanel.hpp  SceneHierarchyPanel.cpp
(+61 files in other folders)
